tests/NormalTests/paczka1/fuzzy1/15028831.err
Error in line 5: JXcQdWO S607 O3,3
Error in line 11: A1 S607 77,8
Error in line 14: A1 A1 31,8
Error in line 20: Qt!Z S607 161,2
Error in line 22: ILyGoEMU S607 78,41
Error in line 1: Qt3Z S607 39,9
Error in line 24: A1 A1 30,5
Error in line 33: A1 A311 88,9
Error in line 35: A1 A311 187,6
Error in line 23: Qt3Z S12 26,9
Error in line 16: JXcQdW8 A311 16,9
